# sample-annotator

./: .env.example  .env.template  .gitignore  ABOUT.md  CLAUDE.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  cat_summary.py  gold-knowledge-management.md  known_orcids.tsv  known_templates.tsv  make-gold-cache.Makefile  num_summary.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  unit_count_in_column.tsv
.github/workflows/: check-pull-request.yaml
assets/: bibo_DocumentStatus.tsv  bibo_DocumentStatus.tsv.bak  bioscales_sample_metadata_from_csv.yaml  mcafes_sample_metadata_from_sqlite.yaml  nmdc_only.tsv  sample_metadata_from_dev_api.yaml  sample_metadata_from_hybrid_no_outer_type_no_v6_only.json  sample_metadata_from_prod_api.yaml  shared_ids.tsv  unit_count_in_column.tsv
assets/in/: Angelo_2014-Banfield-JGI-data.tsv  Bioscales_NMDC_import_nospace_temps.csv  diamond-submission_output.json  diamond-submission_output_valid.json  gold_nmdc_mapping.tsv  known_orcids.tsv  known_templates.tsv  mcafe_accessions.txt  sqlite_to_v3_plus_v6.tsv  study_database_bottomup.yaml
assets/sample_gold_records/: Ga0031151.json  Gb0051341.json  Go0004567.json  Gp0004567.json  Gs0000008.json
config/: README.md
data/: README.md  curated_env_packages.txt  env_package_counts_202108100944.tsv
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  sample_annotator.html  search.html  searchindex.js  setup.html  tests.html
docs/_sources/: index.rst.txt
docs/_sources/static/: intro.md.txt
docs/static/: intro.html
examples/: gold.json
examples/outputs/: gold-output.yaml  gold-report.tsv
local/: SESSION_COOKIE.txt
notebooks/: DataGood-NMDC-Code.ipynb  MNDC_Datagood.py  clean_ph_summary.ipynb  latest_soil_mgs_addl_prods.ipynb  neon_exploration.ipynb  neon_metagenomics_data_urls.txt
pre-poetry/: Pipfile  setup.cfg  setup.py
sample_annotator/: __init__.py  alaska_air_nlcds.py  alaska_air_osm.py  batch_q3.py  capitalizer.py  click_groups_test.py  ecosystems_and_triads_from_mongo.py  fao_terms.py  gold_to_mongo.py  gold_tool.py  hello_yaml.py  json_diff.py  main.py  mappings.csv  non_edge.py  parse_biosample_metadata_from_gold_study.py  r2o_from_nb.py  rebuild_gold_cache.py  rel_to_oxygen_example.py  report_model.py  sample_annotator.py  sample_utils.py  seq_projects_from_mongo.py
sample_annotator/app/: main.py
sample_annotator/batch_utils/: batch_utils.py
sample_annotator/clients/: biosample_sqlite_client.py  gold_client.py  gold_nmdc_pipeline.py  main.py  ncbi_client.py  submission_portal_client.py
sample_annotator/clients/neon/: neon_client.py
sample_annotator/clients/nmdc/: README.md  add_depth2.py  api_or_tsv_metadata_submissions_to_json.py  as_db.yaml  biosample_instantiator_plus.py  biosamples_tsv_to_json.py  depth_fix_for_v3.py  get_gold_biosamples_by_gold_study_id.py  get_metadata_submissions.py  gms2.py  gold_client_wrapper.py  gold_paired_end.py  mint_test.py  nmdc_runtime_snippets.py  runtime_api_client.py  sf2.tsv  submissions_as_studies.py  submissions_to_nmdc_databases.py
sample_annotator/clients/nmdc/artifacts/: gold_nmdc.json
sample_annotator/clients/nmdc/graphql/: README.md  query1.graphql  query2.graphql  query3.graphql  query4.graphql
sample_annotator/clients/nmdc/input/: EMP500_paired_end_summary_sheet1.tsv  EMP500_paired_end_summary_sheet2.tsv  EMP_soil_readQC.json  soil_ids.txt
sample_annotator/clients/nmdc/output/: EMP500_paired_end_merged_sheet1.csv  EMP500_paired_end_merged_sheet2.csv
sample_annotator/clients/src/: example_data.json  main.py  output.json
sample_annotator/clients/src/clients/: submission_portal_client.py
sample_annotator/file_utils/: extract_study_ids_with_biosamples.py  split_out_gold_biosamples.py  xlsx_to_tsv.py
sample_annotator/geolocation/: geotools.py  zobler_540_MixS_lookup.csv
sample_annotator/measurements/: measurements.py
sample_annotator/metadata/: sample_schema.py
sample_annotator/model/schema/: mixs.json
sample_annotator/ontology/: Ontology.py  package_checklist_normalizer.py  triad_normalizer.py
sample_annotator/text_mining/: TextMining.py  settings.ini  settings.json  settings_sample.ini
sample_annotator/text_mining/terms/: envo_termlist.tsv  envo_termlist.tsv.pickle
sparql/: bibo_DocumentStatus.sparql
sphinx/: conf.py  modules.rst  sample_annotator.rst  tests.rst
sql/: env_mapping.sql  merged_table.sql  unit_count_in_column.sql
tests/: __init__.py  test.csv  test_annotate.py  test_biosample_instantiation.py  test_biosample_requireds.py  test_biosmaple_sqlite.py  test_capitalization.py  test_elevation.py  test_fao_soil_type.py  test_gold.py  test_gold_nmdc_pipeline.py  test_measurements.py  test_neon.py  test_ner.py  test_nmdc_gold_wrapper.py  test_normalization.py  test_salinity.py  test_salinity_annotate.py  test_schema.py  test_study_instantiation.py  test_submission_portal_client.py
tests/inputs/: README.md  gold-biosample-ids-subset.tsv  gold-studies-subset.tsv  gold-studies.tsv  salinity_summary.tsv  test_sample_info.yaml
tests/output/: gold_nmdc.json
utils/: also-present.py  flatten.py
