[tool.poetry]
name = "sample-annotator"
version = "0.1.0"
description = "NMDC Sample Annotator"
authors = [
    {name = "Chris Mungall", email = "cjmungall@lbl.gov"}
]
license = "CC0 1.0 Universal"
readme = "README.md"
keywords = [
    "microbiome",
    "samples",
    "metadata",
    "linkml",
    "nmdc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
homepage = "https://microbiomedata.github.io/sample-annotator/"
repository = "https://github.com/microbiomedata/sample-annotator"

[tool.poetry.dependencies]
Sphinx = "^4.4.0"
bioregistry = "^0.4.59"
click-log = "^0.3.2"
diskcache = "^5.4.0"
funowl = "^0.1.11"
git-root = "^0.1"
googlemaps = "^4.6.0"
linkml = "^1.1.18"
nmdc-schema = "^7.0.0"
pandas = "^1.4.1"
python = "^3.9"
quantulum3 = "^0.7.10"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.0.0"
uvicorn = "^0.17.4"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.1.0"
pytest = "^7.0.1"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
annotate-sample = "sample_annotator.sample_annotator:cli"
sqlite_client_cli = "sample_annotator.clients.biosample_sqlite_client:cli"
rel_to_oxygen_example = "sample_annotator.rel_to_oxygen_example:cli"
