[tool.poetry]
name = "sample-annotator"
version = "0.1.0"
description = "NMDC Sample Annotator"
authors = [
    "Chris Mungall <cjmungall@lbl.gov>",
]
license = "CC0 1.0 Universal"
readme = "README.md"
keywords = [
    "microbiome",
    "samples",
    "metadata",
    "linkml",
    "nmdc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
homepage = "https://microbiomedata.github.io/sample-annotator/"
repository = "https://github.com/microbiomedata/sample-annotator"

[tool.poetry.dependencies]
#funowl = "^0.2"
#uvicorn = "^0.30"
Sphinx = "^8.0"
bioregistry = "^0.11"
click-log = "^0.4"
diskcache = "^5.6"
git-root = "^0.1"
googlemaps = "^4.6.0"
linkml = "^1.7"
nmdc-schema = "^11.0"
numpy = "^2.2"
pandas = "^2.2"
pymongo = "^4.11"
python = "^3.10"
python-dotenv = "^1.0"
pyyaml = "^6.0" # to humor deptry
quantulum3 = { extras = ["classifier"], version = "^0.9.2" }
recommonmark = "^0.7.1"
sphinx-rtd-theme = "3.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0"
black = "^24.0"
click = "^8.1" # recommended by deptry
deptry = "^0.21.2"
jsonschema = "^4.21" # recommended by deptry
linkml-runtime = "^1.8" # recommended by deptry
matplotlib = "^3.9.2" # for notebooks/DataGood-NMDC-Code.ipynb
nltk = "^3.8" # for notebooks/DataGood-NMDC-Code.ipynb
pydantic = "^2.10" # recommended by deptry
pytest = "^8.0"
requests = "^2.32.2" # recommended by deptry
seaborn = "^0.13" # for notebooks/DataGood-NMDC-Code.ipynb
sqlalchemy = "^2.0" # for notebooks/DataGood-NMDC-Code.ipynb
tox = "4.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
annotate-sample = "sample_annotator.sample_annotator:cli"
cache-gold = "sample_annotator.clients.gold_client:main"
extract-study-ids-with-biosamples = "sample_annotator.file_utils.extract_study_ids_with_biosamples:main"
gold-to-mongo = "sample_annotator.gold_to_mongo:main"
rel_to_oxygen_example = "sample_annotator.rel_to_oxygen_example:cli"
xlsx-to-tsv = "sample_annotator.file_utils.xlsx_to_tsv:xlsx_to_tsv"
rebuild-gold-cache = "sample_annotator.rebuild_gold_cache:rebuild_gold_cache"
gold-tool = "sample_annotator.gold_tool:cli"

