[metadata]
name = sample_annotator
url = https://github.com/microbiomedata/sample-annotator
author = Chris Mungall
author_email = cjmungall@lbl.gov
summary = NMDC Sample Annotator
home_page = https://github.com/microbiomedata/sample-annotator
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    microbiome
    samples
    metadata
    linkml
    nmdc

[files]
packages =
    sample_annotator


[entry_points]
console_scripts =
    annotate-samples = sample_annotator.sample_annotator:cli
    sample-util = sample_annotator.sample_utils.main
    goldapi = sample_annotator.clients.gold_api
